dropshot/tests/fail/bad_endpoint18.stderr
error[E0277]: the trait bound `TypedBody<Stuff>: SharedExtractor` is not satisfied
  --> tests/fail/bad_endpoint18.rs:27:14
   |
27 |     _param1: TypedBody<Stuff>,
   |              ^^^^^^^^^^^^^^^^ the trait `SharedExtractor` is not implemented for `TypedBody<Stuff>`
   |
   = help: the following other types implement trait `SharedExtractor`:
             dropshot::Path<PathType>
             dropshot::Query<QueryType>
note: required by a bound in `need_shared_extractor`
  --> tests/fail/bad_endpoint18.rs:21:1
   |
21 | / #[endpoint {
22 | |     method = GET,
23 | |     path = "/test",
24 | | }]
   | |__^ required by this bound in `need_shared_extractor`
...
27 |       _param1: TypedBody<Stuff>,
   |                --------- required by a bound in this
   = note: this error originates in the attribute macro `endpoint` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `fn(RequestContext<()>, TypedBody<Stuff>, dropshot::Query<Stuff>) -> impl Future<Output = Result<HttpResponseOk<()>, HttpError>> {<impl From<exclusive_extractor_not_last> for ApiEndpoint<<RequestContext<()> as RequestContextArgument>::Context>>::from::exclusive_extractor_not_last}: dropshot::handler::HttpHandlerFunc<_, _, _>` is not satisfied
  --> tests/fail/bad_endpoint18.rs:25:10
   |
21 | / #[endpoint {
22 | |     method = GET,
23 | |     path = "/test",
24 | | }]
   | |__- required by a bound introduced by this call
25 |   async fn exclusive_extractor_not_last(
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `dropshot::handler::HttpHandlerFunc<_, _, _>` is not implemented for fn item `fn(RequestContext<()>, TypedBody<Stuff>, dropshot::Query<Stuff>) -> impl Future<Output = Result<HttpResponseOk<()>, HttpError>> {<impl From<exclusive_extractor_not_last> for ApiEndpoint<<RequestContext<()> as RequestContextArgument>::Context>>::from::exclusive_extractor_not_last}`
   |
note: required by a bound in `ApiEndpoint::<Context>::new`
  --> src/api_description.rs
   |
   |         HandlerType: HttpHandlerFunc<Context, FuncParams, ResponseType>,
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ApiEndpoint::<Context>::new`
